Tools/Convert_GL.h_and_GLext.h_C-Include/temp.h

/*
 * Datatypes
 */
typedef unsigned int	GLenum;
typedef unsigned char	GLboolean;
typedef void		GLvoid;
typedef short		GLshort;	/* 2-byte signed */
typedef int		GLint;		/* 4-byte signed */
typedef unsigned char	GLubyte;	/* 1-byte unsigned */
typedef unsigned short	GLushort;	/* 2-byte unsigned */
typedef unsigned int	GLuint;		/* 4-byte unsigned */
typedef int		GLsizei;	/* 4-byte signed */
typedef float		GLfloat;	/* single precision float */
typedef float		GLclampf;	/* single precision float in [0,1] */
typedef double		GLdouble;	/* double precision float */
 void  glTexCoord3fv( const GLfloat *v );
 void  glTexCoord3iv( const GLint *v );
 void  glTexCoord3sv( const GLshort *v );
 void  glTexCoord4dv( const GLdouble *v );
 void  glTexCoord4fv( const GLfloat *v );
 void  glTexCoord4iv( const GLint *v );
 void  glTexCoord4sv( const GLshort *v );
 void  glRasterPos2d( GLdouble x, GLdouble y );
 void  glRasterPos2f( GLfloat x, GLfloat y );
 void  glRasterPos2i( GLint x, GLint y );
 void  glRasterPos2s( GLshort x, GLshort y );
 void  glRasterPos3d( GLdouble x, GLdouble y, GLdouble z );
 void  glRasterPos3f( GLfloat x, GLfloat y, GLfloat z );
 void  glRasterPos3i( GLint x, GLint y, GLint z );
 void  glRasterPos3s( GLshort x, GLshort y, GLshort z );
 void  glRasterPos4d( GLdouble x, GLdouble y, GLdouble z, GLdouble w );
 void  glRasterPos4f( GLfloat x, GLfloat y, GLfloat z, GLfloat w );
 void  glRasterPos4i( GLint x, GLint y, GLint z, GLint w );
 void  glRasterPos4s( GLshort x, GLshort y, GLshort z, GLshort w );
 void  glRasterPos2dv( const GLdouble *v );
 void  glRasterPos2fv( const GLfloat *v );
 void  glRasterPos2iv( const GLint *v );
 void  glRasterPos2sv( const GLshort *v );
 void  glRasterPos3dv( const GLdouble *v );
 void  glRasterPos3fv( const GLfloat *v );
 void  glRasterPos3iv( const GLint *v );
 void  glRasterPos3sv( const GLshort *v );
 void  glRasterPos4dv( const GLdouble *v );
 void  glRasterPos4fv( const GLfloat *v );
 void  glRasterPos4iv( const GLint *v );
 void  glRasterPos4sv( const GLshort *v );
 void  glRectd( GLdouble x1, GLdouble y1, GLdouble x2, GLdouble y2 );
 void  glRectf( GLfloat x1, GLfloat y1, GLfloat x2, GLfloat y2 );
 void  glRecti( GLint x1, GLint y1, GLint x2, GLint y2 );
 void  glRects( GLshort x1, GLshort y1, GLshort x2, GLshort y2 );
 void  glRectdv( const GLdouble *v1, const GLdouble *v2 );
 void  glRectfv( const GLfloat *v1, const GLfloat *v2 );
 void  glRectiv( const GLint *v1, const GLint *v2 );
 void  glRectsv( const GLshort *v1, const GLshort *v2 );
/*
 * Vertex Arrays  (1.1)
 */

 void  glVertexPointer( GLint size, GLenum type,
                                       GLsizei stride, const GLvoid *ptr );
 void  glNormalPointer( GLenum type, GLsizei stride,
                                       const GLvoid *ptr );
 void  glColorPointer( GLint size, GLenum type,
                                      GLsizei stride, const GLvoid *ptr );
 void  glIndexPointer( GLenum type, GLsizei stride,
                                      const GLvoid *ptr );
 void  glTexCoordPointer( GLint size, GLenum type,
                                         GLsizei stride, const GLvoid *ptr );
 void  glEdgeFlagPointer( GLsizei stride, const GLvoid *ptr );
 void  glGetPointerv( GLenum pname, GLvoid **params );
 void  glArrayElement( GLint i );
 void  glDrawArrays( GLenum mode, GLint first, GLsizei count );
 void  glDrawElements( GLenum mode, GLsizei count,
                                      GLenum type, const GLvoid *indices );
 void  glInterleavedArrays( GLenum format, GLsizei stride,
                                           const GLvoid *pointer );
/*
 * Lighting
 */

 void  glShadeModel( GLenum mode );
 void  glLightf( GLenum light, GLenum pname, GLfloat param );
 void  glLighti( GLenum light, GLenum pname, GLint param );
 void  glLightfv( GLenum light, GLenum pname,
                                 const GLfloat *params );
 void  glLightiv( GLenum light, GLenum pname,
                                 const GLint *params );
 void  glGetLightfv( GLenum light, GLenum pname,
                                    GLfloat *params );
 void  glGetLightiv( GLenum light, GLenum pname,
                                    GLint *params );
 void  glLightModelf( GLenum pname, GLfloat param );
 void  glLightModeli( GLenum pname, GLint param );
 void  glLightModelfv( GLenum pname, const GLfloat *params );
 void  glLightModeliv( GLenum pname, const GLint *params );
 void  glMaterialf( GLenum face, GLenum pname, GLfloat param );
 void  glMateriali( GLenum face, GLenum pname, GLint param );
 void  glMaterialfv( GLenum face, GLenum pname, const GLfloat *params );
 void  glMaterialiv( GLenum face, GLenum pname, const GLint *params );
 void  glGetMaterialfv( GLenum face, GLenum pname, GLfloat *params );
 void  glGetMaterialiv( GLenum face, GLenum pname, GLint *params );
 void  glColorMaterial( GLenum face, GLenum mode );
/*
 * Raster functions
 */

 void  glPixelZoom( GLfloat xfactor, GLfloat yfactor );
 void  glPixelStoref( GLenum pname, GLfloat param );
 void  glPixelStorei( GLenum pname, GLint param );
 void  glPixelTransferf( GLenum pname, GLfloat param );
 void  glPixelTransferi( GLenum pname, GLint param );
 void  glPixelMapfv( GLenum map, GLsizei mapsize,
                                    const GLfloat *values );
 void  glPixelMapuiv( GLenum map, GLsizei mapsize,
                                     const GLuint *values );
 void  glPixelMapusv( GLenum map, GLsizei mapsize,
                                     const GLushort *values );
 void  glGetPixelMapfv( GLenum map, GLfloat *values );
 void  glGetPixelMapuiv( GLenum map, GLuint *values );
 void  glGetPixelMapusv( GLenum map, GLushort *values );
 void  glBitmap( GLsizei width, GLsizei height,
                                GLfloat xorig, GLfloat yorig,
                                GLfloat xmove, GLfloat ymove,
                                const GLubyte *bitmap );
 void  glReadPixels( GLint x, GLint y,
                                    GLsizei width, GLsizei height,
                                    GLenum format, GLenum type,
                                    GLvoid *pixels );
 void  glDrawPixels( GLsizei width, GLsizei height,
                                    GLenum format, GLenum type,
                                    const GLvoid *pixels );
 void  glCopyPixels( GLint x, GLint y,
                                    GLsizei width, GLsizei height,
                                    GLenum type );
/*
 * Stenciling
 */

 void  glStencilFunc( GLenum func, GLint ref, GLuint mask );
 void  glStencilMask( GLuint mask );
 void  glStencilOp( GLenum fail, GLenum zfail, GLenum zpass );
 void  glClearStencil( GLint s );
/*
 * Texture mapping
 */

 void  glTexGend( GLenum coord, GLenum pname, GLdouble param );
 void  glTexGenf( GLenum coord, GLenum pname, GLfloat param );
 void  glTexGeni( GLenum coord, GLenum pname, GLint param );
 void  glTexGendv( GLenum coord, GLenum pname, const GLdouble *params );
 void  glTexGenfv( GLenum coord, GLenum pname, const GLfloat *params );
 void  glTexGeniv( GLenum coord, GLenum pname, const GLint *params );
 void  glGetTexGendv( GLenum coord, GLenum pname, GLdouble *params );
 void  glGetTexGenfv( GLenum coord, GLenum pname, GLfloat *params );
 void  glGetTexGeniv( GLenum coord, GLenum pname, GLint *params );
 void  glTexEnvf( GLenum target, GLenum pname, GLfloat param );
 void  glTexEnvi( GLenum target, GLenum pname, GLint param );
 void  glTexEnvfv( GLenum target, GLenum pname, const GLfloat *params );
 void  glTexEnviv( GLenum target, GLenum pname, const GLint *params );
 void  glGetTexEnvfv( GLenum target, GLenum pname, GLfloat *params );
 void  glGetTexEnviv( GLenum target, GLenum pname, GLint *params );
 void  glTexParameterf( GLenum target, GLenum pname, GLfloat param );
 void  glTexParameteri( GLenum target, GLenum pname, GLint param );
 void  glTexParameterfv( GLenum target, GLenum pname,
                                          const GLfloat *params );
 void  glTexParameteriv( GLenum target, GLenum pname,
                                          const GLint *params );
 void  glGetTexParameterfv( GLenum target,
                                           GLenum pname, GLfloat *params);
 void  glGetTexParameteriv( GLenum target,
                                           GLenum pname, GLint *params );
 void  glGetTexLevelParameterfv( GLenum target, GLint level,
                                                GLenum pname, GLfloat *params );
 void  glGetTexLevelParameteriv( GLenum target, GLint level,
                                                GLenum pname, GLint *params );
 void  glTexImage1D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLint border,
                                    GLenum format, GLenum type,
                                    const GLvoid *pixels );
 void  glTexImage2D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLsizei height,
                                    GLint border, GLenum format, GLenum type,
                                    const GLvoid *pixels );
 void  glGetTexImage( GLenum target, GLint level,
                                     GLenum format, GLenum type,
                                     GLvoid *pixels );
/* 1.1 functions */

 void  glGenTextures( GLsizei n, GLuint *textures );
 void  glDeleteTextures( GLsizei n, const GLuint *textures);
 void  glBindTexture( GLenum target, GLuint texture );
 void  glPrioritizeTextures( GLsizei n,
                                            const GLuint *textures,
                                            const GLclampf *priorities );
 GLboolean  glAreTexturesResident( GLsizei n,
                                                  const GLuint *textures,
                                                  GLboolean *residences );
 GLboolean  glIsTexture( GLuint texture );
 void  glTexSubImage1D( GLenum target, GLint level,
                                       GLint xoffset,
                                       GLsizei width, GLenum format,
                                       GLenum type, const GLvoid *pixels );
 void  glTexSubImage2D( GLenum target, GLint level,
                                       GLint xoffset, GLint yoffset,
                                       GLsizei width, GLsizei height,
                                       GLenum format, GLenum type,
                                       const GLvoid *pixels );
 void  glCopyTexImage1D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLint border );
 void  glCopyTexImage2D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLsizei height,
                                        GLint border );
 void  glCopyTexSubImage1D( GLenum target, GLint level,
                                           GLint xoffset, GLint x, GLint y,
                                           GLsizei width );
 void  glCopyTexSubImage2D( GLenum target, GLint level,
                                           GLint xoffset, GLint yoffset,
                                           GLint x, GLint y,
                                           GLsizei width, GLsizei height );
/*
 * Evaluators
 */

 void  glMap1d( GLenum target, GLdouble u1, GLdouble u2,
                               GLint stride,
                               GLint order, const GLdouble *points );
 void  glMap1f( GLenum target, GLfloat u1, GLfloat u2,
                               GLint stride,
                               GLint order, const GLfloat *points );
 void  glMap2d( GLenum target,
		     GLdouble u1, GLdouble u2, GLint ustride, GLint uorder,
		     GLdouble v1, GLdouble v2, GLint vstride, GLint vorder,
		     const GLdouble *points );
 void  glMap2f( GLenum target,
		     GLfloat u1, GLfloat u2, GLint ustride, GLint uorder,
		     GLfloat v1, GLfloat v2, GLint vstride, GLint vorder,
		     const GLfloat *points );
 void  glGetMapdv( GLenum target, GLenum query, GLdouble *v );