Examples/glfw3/gl.pas

procedure glTexCoord3fv(v: PGLfloat); cdecl; external;
procedure glTexCoord3iv(v: PGLint); cdecl; external;
procedure glTexCoord3sv(v: PGLshort); cdecl; external;
procedure glTexCoord4dv(v: PGLdouble); cdecl; external;
procedure glTexCoord4fv(v: PGLfloat); cdecl; external;
procedure glTexCoord4iv(v: PGLint); cdecl; external;
procedure glTexCoord4sv(v: PGLshort); cdecl; external;
procedure glRasterPos2d(x: TGLdouble; y: TGLdouble); cdecl; external;
procedure glRasterPos2f(x: TGLfloat; y: TGLfloat); cdecl; external;
procedure glRasterPos2i(x: TGLint; y: TGLint); cdecl; external;
procedure glRasterPos2s(x: TGLshort; y: TGLshort); cdecl; external;
procedure glRasterPos3d(x: TGLdouble; y: TGLdouble; z: TGLdouble); cdecl; external;
procedure glRasterPos3f(x: TGLfloat; y: TGLfloat; z: TGLfloat); cdecl; external;
procedure glRasterPos3i(x: TGLint; y: TGLint; z: TGLint); cdecl; external;
procedure glRasterPos3s(x: TGLshort; y: TGLshort; z: TGLshort); cdecl; external;
procedure glRasterPos4d(x: TGLdouble; y: TGLdouble; z: TGLdouble; w: TGLdouble); cdecl; external;
procedure glRasterPos4f(x: TGLfloat; y: TGLfloat; z: TGLfloat; w: TGLfloat); cdecl; external;
procedure glRasterPos4i(x: TGLint; y: TGLint; z: TGLint; w: TGLint); cdecl; external;
procedure glRasterPos4s(x: TGLshort; y: TGLshort; z: TGLshort; w: TGLshort); cdecl; external;
procedure glRasterPos2dv(v: PGLdouble); cdecl; external;
procedure glRasterPos2fv(v: PGLfloat); cdecl; external;
procedure glRasterPos2iv(v: PGLint); cdecl; external;
procedure glRasterPos2sv(v: PGLshort); cdecl; external;
procedure glRasterPos3dv(v: PGLdouble); cdecl; external;
procedure glRasterPos3fv(v: PGLfloat); cdecl; external;
procedure glRasterPos3iv(v: PGLint); cdecl; external;
procedure glRasterPos3sv(v: PGLshort); cdecl; external;
procedure glRasterPos4dv(v: PGLdouble); cdecl; external;
procedure glRasterPos4fv(v: PGLfloat); cdecl; external;
procedure glRasterPos4iv(v: PGLint); cdecl; external;
procedure glRasterPos4sv(v: PGLshort); cdecl; external;
procedure glRectd(x1: TGLdouble; y1: TGLdouble; x2: TGLdouble; y2: TGLdouble); cdecl; external;
procedure glRectf(x1: TGLfloat; y1: TGLfloat; x2: TGLfloat; y2: TGLfloat); cdecl; external;
procedure glRecti(x1: TGLint; y1: TGLint; x2: TGLint; y2: TGLint); cdecl; external;
procedure glRects(x1: TGLshort; y1: TGLshort; x2: TGLshort; y2: TGLshort); cdecl; external;
procedure glRectdv(v1: PGLdouble; v2: PGLdouble); cdecl; external;
procedure glRectfv(v1: PGLfloat; v2: PGLfloat); cdecl; external;
procedure glRectiv(v1: PGLint; v2: PGLint); cdecl; external;
procedure glRectsv(v1: PGLshort; v2: PGLshort); cdecl; external;
{
 * Vertex Arrays  (1.1)
  }
procedure glVertexPointer(size: TGLint; _type: TGLenum; stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glNormalPointer(_type: TGLenum; stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glColorPointer(size: TGLint; _type: TGLenum; stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glIndexPointer(_type: TGLenum; stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glTexCoordPointer(size: TGLint; _type: TGLenum; stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glEdgeFlagPointer(stride: TGLsizei; ptr: PGLvoid); cdecl; external;
procedure glGetPointerv(pname: TGLenum; params: PPGLvoid); cdecl; external;
procedure glArrayElement(i: TGLint); cdecl; external;
procedure glDrawArrays(mode: TGLenum; First: TGLint; Count: TGLsizei); cdecl; external;
procedure glDrawElements(mode: TGLenum; Count: TGLsizei; _type: TGLenum; indices: PGLvoid); cdecl; external;
procedure glInterleavedArrays(format: TGLenum; stride: TGLsizei; pointer: PGLvoid); cdecl; external;
{
 * Lighting
  }
procedure glShadeModel(mode: TGLenum); cdecl; external;
procedure glLightf(light: TGLenum; pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glLighti(light: TGLenum; pname: TGLenum; param: TGLint); cdecl; external;
procedure glLightfv(light: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glLightiv(light: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetLightfv(light: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetLightiv(light: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glLightModelf(pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glLightModeli(pname: TGLenum; param: TGLint); cdecl; external;
procedure glLightModelfv(pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glLightModeliv(pname: TGLenum; params: PGLint); cdecl; external;
procedure glMaterialf(face: TGLenum; pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glMateriali(face: TGLenum; pname: TGLenum; param: TGLint); cdecl; external;
procedure glMaterialfv(face: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glMaterialiv(face: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetMaterialfv(face: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetMaterialiv(face: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glColorMaterial(face: TGLenum; mode: TGLenum); cdecl; external;
{
 * Raster functions
  }
procedure glPixelZoom(xfactor: TGLfloat; yfactor: TGLfloat); cdecl; external;
procedure glPixelStoref(pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glPixelStorei(pname: TGLenum; param: TGLint); cdecl; external;
procedure glPixelTransferf(pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glPixelTransferi(pname: TGLenum; param: TGLint); cdecl; external;
procedure glPixelMapfv(map: TGLenum; mapsize: TGLsizei; values: PGLfloat); cdecl; external;
procedure glPixelMapuiv(map: TGLenum; mapsize: TGLsizei; values: PGLuint); cdecl; external;
procedure glPixelMapusv(map: TGLenum; mapsize: TGLsizei; values: PGLushort); cdecl; external;
procedure glGetPixelMapfv(map: TGLenum; values: PGLfloat); cdecl; external;
procedure glGetPixelMapuiv(map: TGLenum; values: PGLuint); cdecl; external;
procedure glGetPixelMapusv(map: TGLenum; values: PGLushort); cdecl; external;
procedure glBitmap(Width: TGLsizei; Height: TGLsizei; xorig: TGLfloat; yorig: TGLfloat; xmove: TGLfloat;
  ymove: TGLfloat; bitmap: PGLubyte); cdecl; external;
procedure glReadPixels(x: TGLint; y: TGLint; Width: TGLsizei; Height: TGLsizei; format: TGLenum;
  _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glDrawPixels(Width: TGLsizei; Height: TGLsizei; format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glCopyPixels(x: TGLint; y: TGLint; Width: TGLsizei; Height: TGLsizei; _type: TGLenum); cdecl; external;
{
 * Stenciling
  }
procedure glStencilFunc(func: TGLenum; ref: TGLint; mask: TGLuint); cdecl; external;
procedure glStencilMask(mask: TGLuint); cdecl; external;
procedure glStencilOp(fail: TGLenum; zfail: TGLenum; zpass: TGLenum); cdecl; external;
procedure glClearStencil(s: TGLint); cdecl; external;
{
 * Texture mapping
  }
procedure glTexGend(coord: TGLenum; pname: TGLenum; param: TGLdouble); cdecl; external;
procedure glTexGenf(coord: TGLenum; pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glTexGeni(coord: TGLenum; pname: TGLenum; param: TGLint); cdecl; external;
procedure glTexGendv(coord: TGLenum; pname: TGLenum; params: PGLdouble); cdecl; external;
procedure glTexGenfv(coord: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glTexGeniv(coord: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetTexGendv(coord: TGLenum; pname: TGLenum; params: PGLdouble); cdecl; external;
procedure glGetTexGenfv(coord: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetTexGeniv(coord: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glTexEnvf(target: TGLenum; pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glTexEnvi(target: TGLenum; pname: TGLenum; param: TGLint); cdecl; external;
procedure glTexEnvfv(target: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glTexEnviv(target: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetTexEnvfv(target: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetTexEnviv(target: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glTexParameterf(target: TGLenum; pname: TGLenum; param: TGLfloat); cdecl; external;
procedure glTexParameteri(target: TGLenum; pname: TGLenum; param: TGLint); cdecl; external;
procedure glTexParameterfv(target: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glTexParameteriv(target: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetTexParameterfv(target: TGLenum; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetTexParameteriv(target: TGLenum; pname: TGLenum; params: PGLint); cdecl; external;
procedure glGetTexLevelParameterfv(target: TGLenum; level: TGLint; pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetTexLevelParameteriv(target: TGLenum; level: TGLint; pname: TGLenum; params: PGLint); cdecl; external;
procedure glTexImage1D(target: TGLenum; level: TGLint; internalFormat: TGLint; Width: TGLsizei; border: TGLint;
  format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glTexImage2D(target: TGLenum; level: TGLint; internalFormat: TGLint; Width: TGLsizei; Height: TGLsizei;
  border: TGLint; format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glGetTexImage(target: TGLenum; level: TGLint; format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
{ 1.1 functions  }
procedure glGenTextures(n: TGLsizei; textures: PGLuint); cdecl; external;
procedure glDeleteTextures(n: TGLsizei; textures: PGLuint); cdecl; external;
procedure glBindTexture(target: TGLenum; texture: TGLuint); cdecl; external;
procedure glPrioritizeTextures(n: TGLsizei; textures: PGLuint; priorities: PGLclampf); cdecl; external;
function glAreTexturesResident(n: TGLsizei; textures: PGLuint; residences: PGLboolean): TGLboolean; cdecl; external;
function glIsTexture(texture: TGLuint): TGLboolean; cdecl; external;
procedure glTexSubImage1D(target: TGLenum; level: TGLint; xoffset: TGLint; Width: TGLsizei; format: TGLenum;
  _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glTexSubImage2D(target: TGLenum; level: TGLint; xoffset: TGLint; yoffset: TGLint; Width: TGLsizei;
  Height: TGLsizei; format: TGLenum; _type: TGLenum; pixels: PGLvoid); cdecl; external;
procedure glCopyTexImage1D(target: TGLenum; level: TGLint; internalformat: TGLenum; x: TGLint; y: TGLint;
  Width: TGLsizei; border: TGLint); cdecl; external;
procedure glCopyTexImage2D(target: TGLenum; level: TGLint; internalformat: TGLenum; x: TGLint; y: TGLint;
  Width: TGLsizei; Height: TGLsizei; border: TGLint); cdecl; external;
procedure glCopyTexSubImage1D(target: TGLenum; level: TGLint; xoffset: TGLint; x: TGLint; y: TGLint;
  Width: TGLsizei); cdecl; external;
procedure glCopyTexSubImage2D(target: TGLenum; level: TGLint; xoffset: TGLint; yoffset: TGLint; x: TGLint;
  y: TGLint; Width: TGLsizei; Height: TGLsizei); cdecl; external;
{
 * Evaluators
  }
procedure glMap1d(target: TGLenum; u1: TGLdouble; u2: TGLdouble; stride: TGLint; order: TGLint;
  points: PGLdouble); cdecl; external;
procedure glMap1f(target: TGLenum; u1: TGLfloat; u2: TGLfloat; stride: TGLint; order: TGLint;
  points: PGLfloat); cdecl; external;
procedure glMap2d(target: TGLenum; u1: TGLdouble; u2: TGLdouble; ustride: TGLint; uorder: TGLint;
  v1: TGLdouble; v2: TGLdouble; vstride: TGLint; vorder: TGLint; points: PGLdouble); cdecl; external;
procedure glMap2f(target: TGLenum; u1: TGLfloat; u2: TGLfloat; ustride: TGLint; uorder: TGLint;
  v1: TGLfloat; v2: TGLfloat; vstride: TGLint; vorder: TGLint; points: PGLfloat); cdecl; external;
procedure glGetMapdv(target: TGLenum; query: TGLenum; v: PGLdouble); cdecl; external;
